Update CSS and JS to match the extension code

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			transform: rotate(135deg);
 			color: white;
 		}
+		.scroll-btn:hover { opacity: 0.8 }
 		.animated {
 			-webkit-animation-duration: 1s;
 			animation-duration: 1s;
